Use db SecureFashionShop

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -4,8 +4,8 @@ PORT=4041
 NODE_ENV=DEVELOPMENT
 FRONTEND_URL=http://localhost:4040
 
-DB_LOCAL_URI=mongodb://127.0.0.1:27017/BrokenFashionShop
-DB_URI=mongodb+srv://22540008:159753a@cluster-tqh.3acu4.mongodb.net/BrokenFashionShop?retryWrites=true&w=majority&appName=cluster-tqh
+DB_LOCAL_URI=mongodb://127.0.0.1:27017/SecureFashionShop
+DB_URI=mongodb+srv://22540008:159753a@cluster-tqh.3acu4.mongodb.net/SecureFashionShop?retryWrites=true&w=majority&appName=cluster-tqh
 
 JWT_SECRET= ABC123ABC
 JWT_EXPIRES_TIME = 7d
